=== HEAD

* Escape blackslash-carriage return-line feed in strings on Microsoft SQL Server (mluu, jeremyevans) (#462, #461)

* Remove Array#all_two_pairs? (jeremyevans)

* Remove Dataset#disable_insert_returning on PostgreSQL (jeremyevans)

* Remove support for PostgreSQL <8.2 (jeremyevans)

* Remove support for Ruby <1.8.7 (jeremyevans)

=== 3.34.1 (2012-04-02)

* Fix bug in optimization of primary key lookup (jeremyevans) (#460)

=== 3.34.0 (2012-04-02)

* Fix connection failures when connecting to PostgreSQL with newer versions of swift (jeremyevans)

* Fix using a bound variable for a limit in the ibmdb adapter on ruby 1.9 (jeremyevans)

* primary_key :column, :type=>Bignum now works correctly on H2 (jeremyevans)

* Add query_literals extension for treating regular strings like literal strings in select, group, and order methods (jeremyevans)

* Actually use RETURNING for deletes/updates on PostgreSQL 8.2-9.0 (jeremyevans)

* You can now require 'sequel/no_core_ext' to load Sequel without the core extensions (jeremyevans)

* The core extensions have now been made a real Sequel extension (still loaded by default) (jeremyevans)

* VirtualRow#` has been added for creating literal strings (jeremyevans)

* VirtualRow instances now have operator methods defined {+,-,*,/,&,|,~,>,<,>=,<=} (jeremyevans)

* Array#all_two_pairs? is now deprecated and will be removed after 3.34.0 is released (jeremyevans)

* All of Sequel's core extensions now have equivalent methods defined on the Sequel module (jeremyevans)

* Add Sequel.core_extensions? for checking if the core extensions are enabled (jeremyevans)

* Increase speed of Model#this by about 85% (jeremyevans)

* Increase speed of Model#delete and #destroy by about 75% for models with simple datasets (jeremyevans)

* Make nested_attributes plugin work when destroying/removing associated objects when strict_param_setting is true (r-stu31) (#455)
